fixed floating images and image overflow

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@ html {
   background-color: #495562;
 }
 
+img {
+  max-height: 500px;
+}
+
 .btn {
   background-color: #495562;
   border: 2px solid #97a49b;
@@ -33,10 +37,13 @@ div div {
     background-color: transparent;
     color: #efefef;
     border: 2px solid #efefef;
+    float: right;
+    margin-top: 5em;
   }
 
-  div div {
+  .text {
     max-width: 25em;
+    float: left;
   }
 
   .banner-text {
